@@ -81,6 +81,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   when using rebuildFileCache.php
 * (bug 22496) Viewing diff of a redirect page without specifying "oldid"
   parameter no longer makes the page displayed as being the redirect target
+* (bug 22918) Feed cache keys now use $wgRenderHashAppend
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent
